--- a/assets/app.css
+++ b/assets/app.css
@@ -1405,6 +1405,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .p-\[20px\] {
   padding: 20px;
 }
+.p-10 {
+  padding: 2.5rem;
+}
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
