--- a/assets/app.css
+++ b/assets/app.css
@@ -728,6 +728,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .top-4 {
   top: 1rem;
 }
+.left-1\/2 {
+  left: 50%;
+}
 .z-10 {
   z-index: 10;
 }
@@ -898,6 +901,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .aspect-\[1\/1\] {
   aspect-ratio: 1/1;
+}
+.aspect-auto {
+  aspect-ratio: auto;
 }
 .h-10 {
   height: 2.5rem;
@@ -1574,6 +1580,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .leading-relaxed {
   line-height: 1.625;
 }
+.leading-none {
+  line-height: 1;
+}
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -1629,6 +1638,38 @@ input[type="number"]::-webkit-outer-spin-button,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-shof-blue {
+  --tw-text-opacity: 1;
+  color: rgb(18 55 81 / var(--tw-text-opacity));
+}
+.text-shof-brown {
+  --tw-text-opacity: 1;
+  color: rgb(153 138 95 / var(--tw-text-opacity));
+}
+.text-shof-gray {
+  --tw-text-opacity: 1;
+  color: rgb(198 179 165 / var(--tw-text-opacity));
+}
+.text-shof-green {
+  --tw-text-opacity: 1;
+  color: rgb(139 172 165 / var(--tw-text-opacity));
+}
+.text-shof-pink {
+  --tw-text-opacity: 1;
+  color: rgb(229 199 191 / var(--tw-text-opacity));
+}
+.text-shof-violet {
+  --tw-text-opacity: 1;
+  color: rgb(222 202 229 / var(--tw-text-opacity));
+}
+.text-shof-yellow {
+  --tw-text-opacity: 1;
+  color: rgb(234 187 99 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
