--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,6 @@
 @import "./variants.css";
 @import "./logo-animated.css";
+@import "./slider.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -53,7 +54,7 @@
 
 @layer components {
   .container {
-    @apply max-w-[1280px];
+    max-width: 1280px;
   }
   .button {
     @apply bg-primary
@@ -89,7 +90,8 @@
 
 /* Basic Shopify Policy Pages styling */
 .shopify-policy__container {
-  @apply max-w-[1020px] px-[20px] !important;
+  max-width: 1020px !important;
+  padding: 0 20px 0 20px !important;
 }
 
 .shopify-policy__title {
