--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,50 +1,51 @@
 <div class="container my-8 max-w-[400px] text-center">
-  <h1 class="text-3xl font-bold">Activate account</h1>
-  <p class="mt-4">Create your password to activate your account</p>
+  <h1 class="text-3xl font-bold">Aktywuj konto</h1>
+  <p class="mt-4">Utwórz hasło aby aktywować konto</p>
   <div>
-    {% form 'activate_customer_password',
-      class: 'space-y-4',
-      id: 'activate_account_form'
+    {% form 'activate_customer_password'
+      , class: 'space-y-4'
+      , id: 'activate_account_form'
     %}
-		{% if form.errors %}
-			<div class="flex flex-row items-center justify-center w-full my-3">
-				{% for error in form.errors %}
-					<div class="text-red-500">
-						{% render 'icon-failed' %}
-					</div>
-					<p class="text-red-500 text-sm font-bold ml-2">
-						{{ form.errors.translated_fields[error] }} - {{ form.errors.messages[error] }}
-					</p>
-				{% endfor %}
-			</div>
-		{% endif %}
+      {% if form.errors %}
+        <div class="flex flex-row items-center justify-center w-full my-3">
+          {% for error in form.errors %}
+            <div class="text-red-500">
+              {% render 'icon-failed' %}
+            </div>
+            <p class="text-red-500 text-sm font-bold ml-2">
+              {{ form.errors.translated_fields[error] }} - {{ form.errors.messages[error] }}
+            </p>
+          {% endfor %}
+        </div>
+      {% endif %}
       <div>
-        <label for="password" class="sr-only">Password</label>
+        <label for="password" class="sr-only">Hasło</label>
         <input
           type="password"
           name="customer[password]"
           id="password"
-          placeholder="Password"
+          placeholder="Hasło"
           class="input"
           autocomplete="new-password"
-					required
-        >
+          required>
       </div>
       <div>
-        <label for="confirm_password" class="sr-only">Confirm Password</label>
+        <label for="confirm_password" class="sr-only">Potwierdź hasło</label>
         <input
           type="password"
           name="customer[password_confirmation]"
           id="confirm_password"
-          placeholder="Confirm password"
+          placeholder="Potwierdź hasło"
           class="input"
           autocomplete="new-password"
-					required
-        >
+          required>
       </div>
-      <button type="submit" class="button w-full">Activate account</button>
-      <button type="submit" name="decline" class="link mt-3">
-        Decline Invitation
+      <button type="submit" class="button w-full">Aktywuj konto</button>
+      <button
+        type="submit"
+        name="decline"
+        class="link mt-3">
+        Odrzuć zaproszenie
       </button>
     {% endform %}
   </div>
