--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,4 +1,4 @@
 <div class="container">
-	<h1 class="text-3xl font-bold mb-5">{{ page.title }}</h1>
-	{{ page.content }}
+  <h1 class="text-3xl font-medium my-5">{{ page.title }}</h1>
+  {{ page.content }}
 </div>
