--- a/sections/accordion-big.liquid
+++ b/sections/accordion-big.liquid
@@ -1,34 +1,32 @@
 <div class="container">
-
   <div x-data="{ 
           activeAccordion: '', 
           setActiveAccordion(id) { 
               this.activeAccordion = (this.activeAccordion == id) ? '' : id 
           } 
       }" class="relative w-full text-lg font-normal">
-    {% for item in section.settings.blocks %}
+    {% for block in section.blocks %}
       <div
         x-data="{ id: $id('accordion') }"
         :class="{ 'text-neutral-900': activeAccordion==id, 'text-neutral-600 hover:text-neutral-900': activeAccordion!=id }"
         class="cursor-pointer group">
-        <button @click="setActiveAccordion(id)" class="flex items-center justify-start w-full border-b-2 border-gray-500 p-4 gap-4 select-none">
+        <button @click="setActiveAccordion(id)" class="flex items-center justify-start w-full border-b border-gray-500 p-4 gap-4 select-none">
           <div class="duration-300 ease-out" :class="{ 'rotate-[90deg]': activeAccordion==id }">
             {% render 'icon-chevron-right' %}
           </div>
-          <span>What is Pines?</span>
+          <span>{{ block.settings.title }}</span>
         </button>
         <div
           x-show="activeAccordion==id"
           x-collapse
           x-cloak>
-          <div class="p-4 pt-2 opacity-70">
-            Pines is a UI library built for AlpineJS and TailwindCSS.
+          <div class="p-4 pt-2 opacity-70 font-light">
+            {{ block.settings.content | richtext }}
           </div>
         </div>
       </div>
     {% endfor %}
   </div>
-
 </div>
 
 {% schema %}
