--- a/sections/heading.liquid
+++ b/sections/heading.liquid
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-3xl font-medium my-5">{{ page.title }}</h1>
+  <h1 class="text-3xl text-primary font-medium my-5">{{ page.title }}</h1>
 </div>
 
 {% schema %}
