--- a/assets/app.css
+++ b/assets/app.css
@@ -1495,6 +1495,10 @@ th {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
 .border {
   border-width: 1px;
 }
@@ -1506,6 +1510,9 @@ th {
 }
 .border-r-0 {
   border-right-width: 0px;
+}
+.border-none {
+  border-style: none;
 }
 .border-\[\#ddd\] {
   --tw-border-opacity: 1;
@@ -2498,6 +2505,18 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:border-r {
     border-right-width: 1px;
+  }
+  .sm\:border-b {
+    border-bottom-width: 1px;
+  }
+  .sm\:border-b-2 {
+    border-bottom-width: 2px;
+  }
+  .sm\:border-b-0 {
+    border-bottom-width: 0px;
+  }
+  .sm\:border-none {
+    border-style: none;
   }
   .sm\:bg-white\/70 {
     background-color: rgb(255 255 255 / 0.7);
