--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -4,6 +4,8 @@
 		loading: false,
     
 		updateCart(){
+      console.log(this.$refs);
+
 			fetch('/?view=ajax-cart-drawer')
 			.then(response => response.text())
 			.then(cartData => {
@@ -37,7 +39,7 @@
     x-transition:leave-end="translate-x-full"
     class="fixed transition z-50 bg-white top-0 right-0  w-full flex flex-col shadow-l h-full md:w-[450px]">
     {% render 'loader' %}
-    <div class="relative h-full flex flex-col">
+    <div class="relative h-full flex flex-col" x-ref="cart_drawer_content">
       {% render 'cart-drawer-content' %}
     </div>
   </div>
