--- a/assets/app.css
+++ b/assets/app.css
@@ -899,20 +899,8 @@ th {
 .-order-1 {
   order: -1;
 }
-.order-2 {
-  order: 2;
-}
-.order-1 {
-  order: 1;
-}
-.order-4 {
-  order: 4;
-}
 .col-span-2 {
   grid-column: span 2 / span 2;
-}
-.col-span-3 {
-  grid-column: span 3 / span 3;
 }
 .m-10 {
   margin: 2.5rem;
@@ -1056,18 +1044,6 @@ th {
 }
 .mt-auto {
   margin-top: auto;
-}
-.line-clamp-3 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
-.line-clamp-1 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
 }
 .block {
   display: block;
@@ -1401,68 +1377,17 @@ th {
 .grid-cols-\[1fr_2fr\] {
   grid-template-columns: 1fr 2fr;
 }
-.grid-cols-\[content-max_1fr\] {
-  grid-template-columns: content-max 1fr;
-}
-.grid-cols-\[max-content_1fr\] {
-  grid-template-columns: max-content 1fr;
-}
-.grid-cols-\[min-max\(max-content_1fr\)_minmax\(max-content_1fr\)\] {
-  grid-template-columns: min-max(max-content 1fr) minmax(max-content 1fr);
-}
-.grid-cols-\[minmax\(max-content_1fr\)_minmax\(max-content_1fr\)\] {
-  grid-template-columns: minmax(max-content 1fr) minmax(max-content 1fr);
-}
-.grid-cols-\[repeat\(4\2c minmax\(fit-content\2c 1fr\)\)\] {
-  grid-template-columns: repeat(4,minmax(fit-content,1fr));
-}
-.grid-cols-\[repeat\(2\2c minmax\(fit-content\2c 1fr\)\)\] {
-  grid-template-columns: repeat(2,minmax(fit-content,1fr));
-}
-.grid-cols-\[repeat\(2_minmax\(fit-content\2c 1fr\)\)\] {
-  grid-template-columns: repeat(2 minmax(fit-content,1fr));
-}
-.grid-cols-\[repeat\(2minmax\(fit-content\2c 1fr\)\)\] {
-  grid-template-columns: repeat(2minmax(fit-content,1fr));
-}
-.grid-cols-\[repeat\(2minmax\(fit-content_1fr\)\)\] {
-  grid-template-columns: repeat(2minmax(fit-content 1fr));
-}
-.grid-cols-\[repeat\(2\2c minmax\(fit-content_1fr\)\)\] {
-  grid-template-columns: repeat(2,minmax(fit-content 1fr));
-}
-.grid-cols-\[repeat\(2_minmax\(fit-content_1fr\)\)\] {
-  grid-template-columns: repeat(2 minmax(fit-content 1fr));
-}
-.grid-cols-\[repeat\(2\2c minmax\(100px\2c 1fr\)\)\] {
-  grid-template-columns: repeat(2,minmax(100px,1fr));
-}
-.grid-cols-\[minmax\(fit-content\)_minmax\(\)\] {
-  grid-template-columns: minmax(fit-content) minmax();
-}
-.grid-cols-\[minmax\(fit-content\2c 1fr\)_minmax\(\)\] {
-  grid-template-columns: minmax(fit-content,1fr) minmax();
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax();
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(100px\2c 1fr\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax(100px,1fr);
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(100px\2c 2fr\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax(100px,2fr);
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(content-fit\2c 2fr\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax(content - fit,2fr);
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(1fr\2c 2fr\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax(1fr,2fr);
-}
-.grid-cols-\[minmax\(100px\2c 1fr\)_minmax\(min-content\2c 2fr\)\] {
-  grid-template-columns: minmax(100px,1fr) minmax(min-content,2fr);
-}
 .grid-cols-\[minmax\(max-content\2c 1fr\)_minmax\(min-content\2c 2fr\)\] {
   grid-template-columns: minmax(max-content,1fr) minmax(min-content,2fr);
+}
+.grid-cols-\[1fr\2c max-content\] {
+  grid-template-columns: 1fr max-content;
+}
+.grid-cols-\[1fr_max-content\] {
+  grid-template-columns: 1fr max-content;
+}
+.grid-cols-\[1fr_\.4fr\] {
+  grid-template-columns: 1fr .4fr;
 }
 .flex-row {
   flex-direction: row;
@@ -1540,10 +1465,6 @@ th {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
 .gap-y-2 {
   row-gap: 0.5rem;
 }
@@ -1571,10 +1492,6 @@ th {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 .divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
@@ -1657,6 +1574,10 @@ th {
 .border-2 {
   border-width: 2px;
 }
+.border-x {
+  border-left-width: 1px;
+  border-right-width: 1px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1666,10 +1587,6 @@ th {
 .border-\[\#ddd\] {
   --tw-border-opacity: 1;
   border-color: rgb(221 221 221 / var(--tw-border-opacity));
-}
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .border-gray-500 {
   --tw-border-opacity: 1;
@@ -1726,17 +1643,9 @@ th {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .bg-hover {
   --tw-bg-opacity: 1;
@@ -1805,12 +1714,6 @@ th {
 .stroke-current {
   stroke: currentColor;
 }
-.stroke-2 {
-  stroke-width: 2;
-}
-.stroke-1 {
-  stroke-width: 1;
-}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1878,9 +1781,9 @@ th {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -1905,14 +1808,6 @@ th {
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
-}
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1952,6 +1847,12 @@ th {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-left {
   text-align: left;
@@ -2060,9 +1961,6 @@ th {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-.tracking-wide {
-  letter-spacing: 0.025em;
 }
 .text-accent {
   --tw-text-opacity: 1;
@@ -2644,9 +2542,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .sm\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
   .sm\:col-start-1 {
     grid-column-start: 1;
   }
@@ -2673,8 +2568,14 @@ div[data-block-handle='ig_feed'] {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
   }
+  .sm\:block {
+    display: block;
+  }
   .sm\:table-cell {
     display: table-cell;
+  }
+  .sm\:hidden {
+    display: none;
   }
   .sm\:h-auto {
     height: auto;
@@ -2729,36 +2630,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
-  .sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .sm\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  .sm\:grid-cols-\[repeat\(4_minmax\(fit-content\2c 1fr\)\)\] {
-    grid-template-columns: repeat(4 minmax(fit-content,1fr));
-  }
-  .sm\:grid-cols-\[repeat\(4\2c 1fr\)\] {
-    grid-template-columns: repeat(4,1fr);
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c 1fr\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,1fr);
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c max-content\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,max-content);
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c minmax\(\(max-content\2c 1fr\)\)\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,minmax((max-content,1fr)));
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c minmax\(\(min-content\2c 1fr\)\)\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,minmax((min-content,1fr)));
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.1fr\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,.1fr);
-  }
-  .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.3fr\)\] {
-    grid-template-columns: minmax(min-content,1fr) repeat(3,.3fr);
-  }
   .sm\:grid-cols-\[minmax\(min-content\2c 1fr\)_repeat\(3\2c \.4fr\)\] {
     grid-template-columns: minmax(min-content,1fr) repeat(3,.4fr);
   }
@@ -2785,23 +2656,6 @@ div[data-block-handle='ig_feed'] {
   }
   .sm\:gap-4 {
     gap: 1rem;
-  }
-  .sm\:gap-x-2 {
-    -moz-column-gap: 0.5rem;
-         column-gap: 0.5rem;
-  }
-  .sm\:gap-y-4 {
-    row-gap: 1rem;
-  }
-  .sm\:divide-y > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-  }
-  .sm\:divide-x > :not([hidden]) ~ :not([hidden]) {
-    --tw-divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--tw-divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
   }
   .sm\:self-center {
     align-self: center;
@@ -2833,6 +2687,10 @@ div[data-block-handle='ig_feed'] {
   .sm\:p-3 {
     padding: 0.75rem;
   }
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2844,10 +2702,6 @@ div[data-block-handle='ig_feed'] {
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
-  }
-  .sm\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
   .sm\:pt-\[10vmin\] {
     padding-top: 10vmin;
@@ -2959,9 +2813,6 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:items-start {
     align-items: flex-start;
-  }
-  .md\:items-end {
-    align-items: flex-end;
   }
   .md\:items-center {
     align-items: center;
