--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4 sm:px-10 py-10">
-  <div class="flex flex-col gap-4">
+  <div class="flex flex-col gap-4 border-b pb-4">
     {% comment %} Account actions {% endcomment %}
     <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center">
       <div class="font-normal text-4xl">Konto</div>
@@ -20,13 +20,20 @@
         {%- endif -%}
       </div>
     </div>
-    {% comment %} Items {% endcomment %}
 
+    {% comment %} Desktop headings {% endcomment %}
+    <div class="border-b pb-3 mt-4 grid sm:gap-4 sm:grid-cols-[minmax(min-content,1fr)_repeat(3,.4fr)]">
+      <p class="uppercase tracking-widest hidden sm:block">Produkt</p>
+      <p class="uppercase tracking-widest hidden sm:block">Cena</p>
+      <p class="uppercase tracking-widest hidden sm:block">Ilość</p>
+      <p class="uppercase tracking-widest hidden sm:block">Suma</p>
+    </div>
+
+    {% comment %} Items {% endcomment %}
     {% for line_item in order.line_items %}
       <div class="border-b pb-3 grid grid-cols-[minmax(max-content,1fr)_minmax(min-content,2fr)] gap-x-4 gap-y-2 sm:gap-4 sm:grid-cols-[minmax(min-content,1fr)_repeat(3,.4fr)]">
-
-        <p class="uppercase tracking-widest">Produkt</p>
-        <div class="flex flex-col sm:col-start-1 sm:row-start-2">
+        <p class="uppercase tracking-widest sm:hidden">Produkt</p>
+        <div class="flex flex-col sm:col-start-1">
           <div class="text-lg underline decoration-1 hover:decoration-2">{{ line_item.title | link_to: line_item.product.url }}</div>
           {% comment %} Item properties {% endcomment %}
           {%- assign property_size = line_item.properties | size -%}
@@ -53,120 +60,45 @@
             {%- endif -%}
           {%- endunless -%}
         </div>
-        <p class="uppercase tracking-widest sm:col-start-2 sm:row-start-1">Cena</p>
-        <div class="font-medium sm:col-start-2 sm:row-start-2">{{ line_item.original_price | money }}</div>
-        <p class="uppercase tracking-widest sm:col-start-3 sm:row-start-1">Ilość</p>
-        <div class="font-medium sm:col-start-3 sm:row-start-2">{{ line_item.quantity }}</div>
-        <p class="uppercase tracking-widest sm:col-start-4 sm:row-start-1">Suma</p>
-        <div class="font-medium sm:col-start-4 sm:row-start-2">
+        <p class="uppercase tracking-widest sm:hidden">Cena</p>
+        <div class="font-medium sm:col-start-2">{{ line_item.original_price | money }}</div>
+        <p class="uppercase tracking-widest sm:hidden">Ilość</p>
+        <div class="font-medium sm:col-start-3">{{ line_item.quantity }}</div>
+        <p class="uppercase tracking-widest sm:hidden">Suma</p>
+        <div class="font-medium sm:col-start-4">
           {{ line_item.final_line_price | money }}</div>
-
-
       </div>
     {% endfor %}
 
-  </div>
-
-  <div>
-    {% for line_item in order.line_items %}
-      <div class="w-full border divide-y rounded mb-4">
-        <div class="grid grid-cols-1 md:grid-cols-3 lg:gap-4 gap-12 p-4 md:p-12">
-
-          <div>
-            <h1 class="text-xl font-medium mb-4">{{ line_item.title | link_to: line_item.product.url }}</h1>
-            <table class="table-auto w-full mb-4">
-              <tbody>
-                <tr>
-                  <td class="border px-4 py-2">Cena</td>
-                  <td class="border px-4 py-2">{{ line_item.original_price | money }}</td>
-                </tr>
-                <tr>
-                  <td class="border px-4 py-2">Ilość</td>
-                  <td class="border px-4 py-2">{{ line_item.quantity }}</td>
-                </tr>
-                <tr>
-                  <td class="border px-4 py-2">Kwota</td>
-                  <td class="border px-4 py-2">{{ line_item.final_line_price | money }}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="p-4 md:p-12">
-          <h1 class="text-lg font-medium mb-4">Status realizacji</h1>
-          {% if line_item.successfully_fulfilled_quantity > 0 %}
-            <p class="mb-2">We have fulfilled {{ line_item.successfully_fulfilled_quantity }} items of your recent order.</p>
-            <p class="mb-2">Firma kurierska: {{ line_item.fulfillment.tracking_company }}
-            </p>
-            <p class="mb-2">Numer przesyłki: {{ line_item.fulfillment.tracking_number }}</p>
-            <a
-              target="_blank"
-              href="{{ line_item.fulfillment.tracking_url }}"
-              class="flex w-max text-sm text-white font-medium bg-gray-700 hover:bg-gray-900 px-4 py-1 rounded">Śledź przesyłkę {% render 'icon-link' %}</a>
-          {% else %}
-            <p>Nie zrealizowaliśmy jeszcze tego zamówienia</p>
-          {% endif %}
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-  <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-4 lg:gap-12 border rounded p-4 md:p-12 my-6">
-    <div>
-      <h1 class="font-medium mb-4">Adres dostawy</h1>
-      <div class="mb-4">
-        <!-- {{ order.shipping_address | format_address }} -->
-        <p>{{ order.shipping_address.street }}</p>
-        {% comment %} <p>Province: {{ order.shipping_address.province }}</p> {% endcomment %}
-        <p>{{ order.shipping_address.city }}</p>
-        <p>{{ order.shipping_address.zip }}</p>
-        <p>{{ order.shipping_address.country }}</p>
-      </div>
+    {% comment %} Order summary {% endcomment %}
+    <div class="grid gap-3 grid-cols-[1fr_max-content] sm:grid-cols-[minmax(min-content,1fr)_repeat(3,.4fr)]">
+      <p class="uppercase tracking-widest sm:col-start-1">Suma częściowa</p>
+      <div class="font-medium sm:col-start-4 text-right sm:text-left">{{ order.subtotal_price | money }}</div>
+      <p class="uppercase tracking-widest sm:col-start-1">Wysyłka</p>
+      <div class="font-medium sm:col-start-4 text-right sm:text-left">{{ order.shipping_price | money }}</div>
+      <p class="uppercase tracking-widest sm:col-start-1 font-medium text-xl">Suma</p>
+      <div class="font-medium text-xl sm:col-start-4 text-right sm:text-left">
+        {{ order.total_price | money }}</div>
     </div>
+  </div>
+
+  {% comment %} Order status {% endcomment %}
+  <div class="grid grid-cols-1 md:grid-cols-2 mt-10 gap-4">
     <div>
-      <h1 class="font-medium mb-4">Adres rozliczeniowy</h1>
+      <h2 class="text-xl font-normal">{{ 'customer.order.billing_address' | t }}</h2>
+      <p>
+        <strong>{{ 'customer.order.payment_status' | t }}:</strong>
+        {{ order.financial_status_label }}
+      </p>
       {{ order.billing_address | format_address }}
     </div>
     <div>
-      <h1 class="font-medium mb-4">Informacje o płatności</h1>
-      {% for transaction in order.transactions %}
-        <div class="mb-4">
-          {% assign credit_card_company = transaction.payment_details.credit_card_company %}
-          {% assign credit_card_last_four_digits = transaction.payment_details.credit_card_number %}
-          {% if credit_card_company %}
-            <p>{{ credit_card_company }}</p>
-            <p>{{ credit_card_last_four_digits }}</p>
-            {% case transaction.status_label %}
-              {% when 'Failure' %}
-                {% assign background = 'style="background: red"' %}
-              {% else %}
-                {% assign background = 'style="background: green"' %}
-
-            {% endcase %}
-            <span {{ background }} class="rounded-full text-sm px-4 py-1 text-white">{{ transaction.status_label }}</span>
-          {% else %}
-            <p class="text-sm mb-4">To zamówienie dodano ręcznie przez {{ shop.name }}</p>
-          {% endif %}
-        </div>
-      {% endfor %}
+      <h2 class="text-xl font-normal">{{ 'customer.order.shipping_address' | t }}</h2>
+      <p>
+        <strong>{{ 'customer.order.fulfillment_status' | t }}:</strong>
+        {{ order.fulfillment_status_label }}
+      </p>
+      {{ order.shipping_address | format_address }}
     </div>
-    <div>
-      <table class="table-auto w-full mb-4">
-        <tbody>
-          <tr>
-            <td class="border px-4 py-2">Suma częściowa</td>
-            <td class="border px-4 py-2">{{ order.subtotal_price | money }}</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2">Wysyłka</td>
-            <td class="border px-4 py-2">{{ order.shipping_price | money }}</td>
-          </tr>
-          <tr>
-            <td class="border px-4 py-2">Kwota całkowita</td>
-            <td class="border px-4 py-2">{{ order.total_price | money }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
   </div>
 </div>
